--- a/src/AlphaMailClient/AlphaMailClient.csproj
+++ b/src/AlphaMailClient/AlphaMailClient.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -35,10 +35,11 @@
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AlphaMailClient\AlphaMailMessage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AlphaMailConfig.cs" />
-    <Compile Include="Client.cs" />
+    <Compile Include="AlphaMailClient\AlphaMailClient.cs" />
     <Compile Include="Events\ConnectedToServerEventArgs.cs" />
     <Compile Include="Events\DisconnectedFromServerEventArgs.cs" />
     <Compile Include="Events\MessageReceivedEventArgs.cs" />
@@ -55,8 +56,5 @@
     <Compile Include="Cryptography\Prng.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <ItemGroup>
-    <Folder Include="Events\" />
-    <Folder Include="Cryptography\" />
-  </ItemGroup>
+  <ItemGroup />
 </Project>
