--- a/src/AlphaMailClient/AlphaMailClient.csproj
+++ b/src/AlphaMailClient/AlphaMailClient.csproj
@@ -40,13 +40,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AlphaMailConfig.cs" />
     <Compile Include="AlphaMailClient\AlphaMailClient.cs" />
-    <Compile Include="Events\ConnectedToServerEventArgs.cs" />
-    <Compile Include="Events\DisconnectedFromServerEventArgs.cs" />
-    <Compile Include="Events\MessageReceivedEventArgs.cs" />
-    <Compile Include="Events\AuthMessageReceivedEventArgs.cs" />
-    <Compile Include="Events\MessageMessageReceivedEventArgs.cs" />
-    <Compile Include="Events\PKeyMessageReceivedEventArgs.cs" />
-    <Compile Include="Events\ErrorMessageReceivedEventArgs.cs" />
     <Compile Include="ClientUI.cs" />
     <Compile Include="Cryptography\PublicKey.cs" />
     <Compile Include="Cryptography\PrivateKey.cs" />
@@ -54,7 +47,16 @@
     <Compile Include="Cryptography\JaCryptPkc.cs" />
     <Compile Include="Cryptography\JaCrypto.cs" />
     <Compile Include="Cryptography\Prng.cs" />
+    <Compile Include="AlphaMailClient\ResultCodes.cs" />
+    <Compile Include="Exceptions\UserAlreadyRegisteredException.cs" />
+    <Compile Include="Exceptions\IncorrectLoginException.cs" />
+    <Compile Include="Exceptions\ServerErrorException.cs" />
+    <Compile Include="AlphaMailClientConfig.cs" />
+    <Compile Include="AlphaMailClientConfigParser.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Exceptions\" />
+  </ItemGroup>
 </Project>
